docs/book/samples/appc/quote_check.out
error[syntax]: unexpected character `'`
  --> quote_check.kso:1:7
   1 | print 'hi'
             ^
